--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
 
+
 .desktop-logoContainer {
     float: left;
     height: inherit;
@@ -270,3 +271,386 @@ a.desktop-submit {
   }
 
 
+
+.login-container {
+    box-sizing: border-box;
+    background: #feedf6;
+    background: -webkit-gradient(linear,left top,right bottom,from(#feedf6),to(#fcf0e2));
+    background: -webkit-linear-gradient(top left,#feedf6,#fcf0e2);
+    background: linear-gradient(to bottom right,#feedf6,#fcf0e2);
+    text-align: center;
+    padding-top: 160px;
+    position: relative;
+    padding-bottom: 160px;
+}
+.login-box {
+    display: inline-block;
+    width: 400px;
+    background-color: #fff;
+    box-shadow: 0 2px 15px rgba(0,0,0,.1);
+    padding: 20px 10px;
+     max-width: 430px; 
+}
+.login-title {
+    font-size: 32px;
+    margin-top: 15px;
+    color: #535766;
+}
+.login-input-container {
+    margin: 30px;
+    border: 1px solid #bfc0c6;
+    border-radius: 5px;
+    padding: 0;
+}
+.login-input-item {
+    position: relative;
+}
+.login-user-input-email {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.login-user-input {
+    display: block;
+    color: #282c3f;
+    
+    font-size: 15px;
+    width: 85%;
+    border:0;
+    padding: 10px 20px;
+}
+.login-login-button-container {
+    padding: 10px 20px;
+    margin: 0;
+    border: 0;
+}
+.login-login-button {
+    background-color: #ff527b;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    padding: 15px;
+    display: block;
+    width: 100%;
+    border: 0;
+    text-transform: uppercase;
+    border-radius: 3px;
+    font-family: Whitney;
+}
+
+.login-link-container {
+    text-align: left;
+    padding: 20px;
+}
+.login-link {
+    cursor: pointer;
+    text-decoration: none;
+    color: #ea5e8b;
+    font-size: 13px;
+    padding: 10px 0;
+}
+.login-right-links {
+    float: right;
+}
+.login-create-account-link {
+    margin-left: 5px;
+}
+
+
+
+
+.signupcontainer{
+    box-sizing: border-box;
+    background: #feedf6;
+    background: -webkit-gradient(linear,left top,right bottom,from(#feedf6),to(#fcf0e2));
+    background: -webkit-linear-gradient(top left,#feedf6,#fcf0e2);
+    background: linear-gradient(to bottom right,#feedf6,#fcf0e2);
+    text-align: center;
+    padding-top: 30px;
+    position: relative;
+    padding-bottom: 40px;
+}
+.login-container {
+    box-sizing: border-box;
+    background: #feedf6;
+    background: -webkit-gradient(linear,left top,right bottom,from(#feedf6),to(#fcf0e2));
+    background: -webkit-linear-gradient(top left,#feedf6,#fcf0e2);
+    background: linear-gradient(to bottom right,#feedf6,#fcf0e2);
+    text-align: center;
+    padding-top: 160px;
+    position: relative;
+    padding-bottom: 160px;
+}
+.login-input-container {
+    margin: 30px;
+    border: 1px solid #bfc0c6;
+    border-radius: 5px;
+    padding: 0;
+}
+.register-box {
+     display: inline-block;
+    width: 400px;
+    background-color: #fff;
+    box-shadow: 0 2px 15px rgba(0,0,0,.1);
+    padding: 20px 10px;
+    max-width: 430px;
+}
+.register-title {
+    font-size: 32px;
+    margin-top: 15px;
+    color: #535766;
+}
+.register-input-container {
+    margin: 20px;
+    border: 1px solid #bfc0c6;
+    border-radius: 5px;
+    padding: 0;
+}
+.register-input-item {
+    position: relative;
+    text-align: left;
+    border-radius: 5px; 
+}
+.register-user-input-email {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.register-user-input {
+    display: block;
+    color: #282c3f;
+    font-size: 15px;
+    padding-right: 40px;
+    width: 80%;
+    border: 0;
+    padding: 15px;
+}
+.register-user-input-password {
+    border-top: 1px solid #d5d6d9;
+}
+.drop{
+    text-align: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.desktop-logoContainer {
+    float: left;
+    height: inherit;
+}
+.desktopNavBarLogo{
+    display: block;
+    float: left;
+    line-height: 80px;
+    width: 150px;
+    height:auto;
+    margin: 0 0 0 25px;
+}
+
+.desktopNavBar-right{
+    display: block;
+    float: right;
+    line-height: 80px;
+    width: 360px;
+    height:auto;
+    margin: 0 0 0 25px;
+    vertical-align: bottom
+}
+
+.desktop-main {
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: Whitney-SemiBold,Whitney;
+    color: #282c3f;
+    padding: 0 7px 27px;
+    margin: 0 10px;
+    border-bottom: none;
+    -webkit-transition: left .2s ease-out,width .2s ease-out;
+    transition: left .2s ease-out,width .2s ease-out;
+    font-weight: 500;
+}
+
+.desktop-navbar {
+    display: block;
+    float: left;
+    line-height: 80px;
+    width: 670px;
+    height: 80px;
+    margin: 0 0 0 25px;
+}
+
+.desktop-navLinks {
+    display: inline-block;
+    float: left;
+}
+
+.desktop-navContent {
+    float: left;
+    border: hidden;
+    text-align: center;
+}
+
+.desktop-main {
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: Whitney-SemiBold,Whitney;
+    color: #282c3f;
+    padding: 0 7px 27px;
+    margin: 0 10px;
+    border-bottom: none;
+    -webkit-transition: left .2s ease-out,width .2s ease-out;
+    transition: left .2s ease-out,width .2s ease-out;
+    font-weight: 500;
+}
+a {
+    background-color: transparent;
+}
+a {
+    text-decoration: none;
+    color: #282c3f;
+}
+
+
+
+.desktop-query {
+    width: 300px;
+    float: left;
+    line-height: 0;
+    margin: 20px 0 20px 10px;
+}
+
+
+.desktop-query>input.desktop-searchBar {
+    font-family: Whitney;
+    display: inline-block;
+    float: left;
+    font-size: 16px;
+    height: 20px;
+    line-height: 24px;
+    width: 235px;
+    color: #696e79;
+    box-sizing: content-box;
+    padding: 8px 10px 10px;
+    margin: 0;
+    outline: 0;
+    border: 1px solid #d5d6d9;
+    border-radius: 4px 0 0 4px;
+    border-right: 0;
+    background: #f5f5f6;
+}
+
+
+a.desktop-submit {
+    box-sizing: content-box;
+    height: 28px;
+    width: 40px;
+    text-align: center;
+    padding: 10px 0 0;
+    background: #f5f5f6;
+    border: 1px solid #d4d5d9;
+    border-left: none;
+    border-radius: 0 4px 4px 0;
+}
+
+
+.desktop-iconSearch, a.desktop-submit {
+    display: inline-block;
+}
+
+.sprites-search {
+    width: 19px;
+    height: 19px;
+    background-position: -753px 0;
+}
+
+.myntraweb-sprite {
+    background: url(https://assets.myntassets.com/assets/images/2016/11/29/11480417430350-myntrawebSprite.png);
+    background-size: 1260px 105px;
+    display: inline-block;
+}
+
+.desktop-actions {
+    float: center;
+    margin-left: 40px;
+    line-height: 0;
+    height: 40px;
+    margin-top: 40px;
+}
+
+.desktop-cart {
+    float:center;
+    margin: 0 0 0 15px;
+    text-decoration: none;
+}
+
+.desktop-cartText {
+    float: center;
+    margin: 20px 0 0 5px;
+    font-family: Whitney-SemiBold,Whitney;
+    font-weight: 500;
+    color: #7e818c;
+}
+
+
+
+
+.myx-stretch {
+    max-width: 100%;
+}
+
+.carousel-borderBottom {
+    border-bottom: 1px solid #eaeaec;
+}
+.carousel-base {
+    box-sizing: border-box;
+    padding-bottom: 15px;
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+
+
+.desktop-fInfoSection {
+    display: inline-block;
+    width: 100%;
+    margin-top: 40px;
+}
+
+.desktop-contact {
+    display: inline-block;
+    float: right;
+    color: #696b79;
+}
+
+.desktop-copywrite {
+    display: inline-block;
+    float: left;
+    color: #94969f;
+}
